# stats-api

./: .gitignore  Cargo.toml
src/: client.rs  lib.rs  model.rs  tests.rs
src/client/: mlb.rs  nhl.rs
src/model/: mlb.rs  nhl.rs
src/tests/: mlb.rs  nhl.rs
src/tests/responses/mlb/: game_content_post_game.json  game_content_pre_game.json  game_linescore_post_game.json  game_linescore_pre_game.json  schedule.json  schedule_empty.json  team.json  teams.json
src/tests/responses/nhl/: game_content_post_game.json  game_content_pre_game.json  game_linescore_post_game.json  game_linescore_pre_game.json  schedule.json  schedule_empty.json  team.json  teams.json
