[package]
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"
name = "stats-api"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[features]
default = ["nhl", "mlb"]
mlb = []
nhl = []

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
chrono = { version = "0.4", features = ["serde"] }

http = "0.1"
curl = { version = "0.4", default-features=false, features = ["static-curl", "static-ssl", "http2"] }
http-client = { version = "1.0", features = ["native_client"] }

futures-preview = "=0.3.0-alpha.19"

[dev-dependencies]
async-std = "1.0"
mockito = "0.22"
